--- a/assets/main.scss
+++ b/assets/main.scss
@@ -247,6 +247,7 @@ section h2::after {
   font-size: 1.1rem;
   line-height: 1.8;
   color: #324748;
+  text-align: center;
 }
 
 /* Projects Section */
